force-app/main/default/objects/Warranty__x/Warranty__x.object-meta.xml
<CustomObject>
    <description>Warranty</description>
    <externalDataSource>Mulesoft</externalDataSource>
    <externalName>Warranty</externalName>
    <label>Warranty</label>
    <pluralLabel>Warranty</pluralLabel>
</CustomObject>