force-app/main/default/objects/Warranty__x/fields/Begins__c.field-meta.xml
<CustomField>
    <fullName>Begins__c</fullName>
    <description>Begins</description>
    <externalDeveloperName>Begins</externalDeveloperName>
    <label>Begins</label>
    <type>Date</type>
</CustomField>