force-app/main/default/objects/Warranty__x/fields/Ends__c.field-meta.xml
<CustomField>
    <fullName>Ends__c</fullName>
    <description>Ends</description>
    <externalDeveloperName>Ends</externalDeveloperName>
    <label>Ends</label>
    <type>Date</type>
</CustomField>