force-app/main/default/objects/Warranty__x/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>VIN</description>
    <externalDeveloperName>VIN</externalDeveloperName>
    <label>VIN</label>
    <length>17</length>
    <referenceTargetField>Vehicle__c.VIN__c</referenceTargetField>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Warranty</relationshipLabel>
    <relationshipName>Warranty</relationshipName>
    <type>IndirectLookup</type>
</CustomField>