force-app/main/default/objects/Warranty__x/fields/WarrantyId__c.field-meta.xml
<CustomField>
    <fullName>WarrantyId__c</fullName>
    <description>WarrantyId</description>
    <externalDeveloperName>WarrantyId</externalDeveloperName>
    <label>WarrantyId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>