force-app/main/default/objects/Warranty__x/fields/WarrantyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyType__c</fullName>
    <description>WarrantyType</description>
    <externalDeveloperName>WarrantyType</externalDeveloperName>
    <label>WarrantyType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>